--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@ body {
     background-size: cover;
 }
 #p1 {
-    color: ghostwhite;
     font-size: xx-large;
 }
 #p2 {
     display: none;
-    opacity: 0.7;
 }
 #p1, #p2 {
     margin: 0;
-    background-color: red;
+    background-color: white;
+    opacity: 0.7;
+    border: 1px solid black;
     padding-left: 2%;
 }
