--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
-body {
+html {
     margin: 0;
     height: 100%;
     width: 100%;
     background: url("./bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+}
+body {
+    margin: auto;
+    height: fit-content;
+    width: 75%;
+    background-color: white;
+    opacity: 0.7;
 }
 #p1 {
     font-size: xx-large;
@@ -14,8 +22,6 @@ body {
 }
 #p1, #p2 {
     margin: 0;
-    background-color: white;
-    opacity: 0.7;
     border: 1px solid black;
     padding-left: 2%;
 }
