--- a/style.css
+++ b/style.css
@@ -1,22 +1,27 @@
-body {
+html {
     margin: 0;
     height: 100%;
     width: 100%;
     background: url("./bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+}
+body {
+    margin: auto;
+    height: fit-content;
+    width: 75%;
+    background-color: white;
+    opacity: 0.7;
 }
 #p1 {
-    color: ghostwhite;
     font-size: xx-large;
 }
 #p2 {
     display: none;
-    opacity: 0.7;
 }
 #p1, #p2 {
     margin: 0;
-    background-color: red;
+    border: 1px solid black;
     padding-left: 2%;
-    width: 20%;
 }
