--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ body {
     background-color: white;
     opacity: 0.7;
 }
-#p1 {
+.p1 {
     font-size: xx-large;
 }
-#p1, #p2 {
+.p1, .p2 {
     margin: 0;
     border: 1px solid black;
+    border-right: none;
     padding-left: 2%;
 }
